--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,6 +53,7 @@ plan:
   stage: plan
   script:
     - cd terraform
+    - echo $tfc_credentials > credentials.tf
     - terraform plan -out out.tfplan
   artifacts:
     expire_in: 8 weeks
@@ -62,6 +63,8 @@ plan:
 apply:
   stage: apply
   script:
+    - cd terraform
+    - echo $tfc_credentials > credentials.tf
     - terraform apply -input=false out.tfplan
   when: manual
   only:
@@ -71,7 +74,7 @@ apply:
 destroy:
   stage: destroy
   script:
-    - terraform init
-    - terraform version
+    - cd terraform
+    - echo $tfc_credentials > credentials.tf
     - terraform destroy -auto-approve
   when: manual
