Add credentials to validate

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ validate:
     policy: push
   script:
     - cd terraform/
+    - echo $tfc_credentials > credentials.tf
     - terraform init
     - terraform version
     - terraform validate
