change to CLI config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ validate:
     policy: push
   script:
     - cd terraform/
-    - echo $tfc_credentials > terraform.rc
+    - echo $tfc_credentials > /root/.terraformrc
     - terraform init
     - terraform version
     - terraform validate
@@ -63,7 +63,7 @@ plan:
   stage: plan
   script:
     - cd terraform
-    - echo $tfc_credentials > terraform.rc
+    - echo $tfc_credentials > /root/.terraformrc
     - terraform plan -out out.tfplan
   artifacts:
     expire_in: 8 weeks
@@ -74,7 +74,7 @@ apply:
   stage: apply
   script:
     - cd terraform
-    - echo $tfc_credentials > terraform.rc
+    - echo $tfc_credentials > /root/.terraformrc
     - terraform apply -input=false out.tfplan
   when: manual
   only:
@@ -85,6 +85,6 @@ destroy:
   stage: destroy
   script:
     - cd terraform
-    - echo $tfc_credentials > terraform.rc
+    - echo $tfc_credentials > /root/.terraformrc
     - terraform destroy -auto-approve
   when: manual
