Update so can package items

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ container-release:
 
 package:
   stage: package
-  image: mikesir87/aws-cli
+  image: registry.gitlab.com/who-docker/aws-cli:latest
   script:
     - zip hello.zip ./lambda-function/
     - aws s3 cp example.zip s3://terraform-serverless-example/$CI_COMMIT_TAG/hello.zip
