Correct name for package

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,7 +101,7 @@ package:
   image: registry.gitlab.com/who-docker/aws-cli:latest
   script:
     - zip hello.zip ./lambda-function/
-    - aws s3 cp example.zip s3://terraform-serverless-example/$CI_COMMIT_TAG/hello.zip
+    - aws s3 cp hello.zip s3://terraform-serverless-example/$CI_COMMIT_TAG/hello.zip
   only:
     - tags
 
